--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -12,9 +12,9 @@
 	--dark-grey: #8D8D8D;
 	--light: #fff;
 	--dark: #000;
-	--green: #81D43A;
+	--green: #6ca53a;
 	--light-green: #E3FFCB;
-	--blue: #1775F1;
+	--blue: #3bf117;
 	--light-blue: #D0E4FF;
 	--dark-blue: #0C5FCD;
 	--red: #FC3B56;
