--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -14,7 +14,7 @@
 	--dark: #000;
 	--green: #6ca53a;
 	--light-green: #E3FFCB;
-	--blue: #3bf117;
+	--blue: #6ca53a;
 	--light-blue: #D0E4FF;
 	--dark-blue: #0C5FCD;
 	--red: #FC3B56;
